@@ -1,3 +1,13 @@
+2010-02-04  Fumitoshi Ukai  <ukai@chromium.org>
+
+        Reviewed by Shinichiro Hamaji.
+
+        websocket/tests/close-on-unload.html failed on Mac Tiger
+        https://bugs.webkit.org/show_bug.cgi?id=34563
+
+        * platform/mac-tiger/Skipped: remove websocket/tests/close-on-unload*.html
+        * websocket/tests/close-on-unload_wsh.py: use dict instead of set.
+
 2010-01-27  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Alexey Proskuryakov and Darin Adler.
